# climbing-cam

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/climbing-cam/: SKILL.md
app/: ab.py  classify.py  cli.py  clip.py  config.py  detect.py  main.py  pipeline.py  screen.py  screen_clip.py
skill/: SKILL.md  climbing-check.md
skills/check/: SKILL.md
skills/split/: SKILL.md
tests/: test_classify.py
web/: app.js  index.html  styles.css
