[project]
name = "climbing-cam"
version = "0.1.0"
description = "Auto-split rock climbing footage into per-attempt clips"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "ultralytics>=8.3",
    "opencv-python>=4.10",
    "numpy>=2.1",
    "lapx>=0.5.11",  # linear assignment, required by ByteTrack tracking
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
